refactor project and add sub-modules